# setuptools-black

./: .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: pythonpackage.yml
setuptools_black/: __init__.py  setuptools_command.py
tests/: test_command.py
tests/data/: setup.py
