[tool]
[tool.poetry]
name = "setuptools-black"
version = "0.1.5"
description = "black command for setuptools"
license = "MIT"
keywords = ["black", "setuptools", "plugin"]
classifiers = ["Framework :: Setuptools Plugin", "Development Status :: 4 - Beta", "Programming Language :: Python :: 3", "Intended Audience :: Developers", "Operating System :: OS Independent", "License :: OSI Approved :: MIT License", "Topic :: Software Development :: Libraries :: Python Modules"]
authors = ["Aurelien Grenotton <agrenott@gmail.com>"]
readme = "README.md"
repository = "https://github.com/agrenott/setuptools-black"

[tool.poetry.dependencies]
python = "^3.6"
black = ">=18.9b0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
# coveralls issue https://github.com/coveralls-clients/coveralls-python/issues/203
coverage = "^4.5.4"

[tool.poetry.plugins."distutils.commands"]
"format" = "setuptools_black.setuptools_command:FormatCommand"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"